# zzlepuh

./: .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: windows-x64.yml
e2e/: bimaru.spec.ts  calcudoku.spec.ts  kontab.spec.ts  nonogram.spec.ts
e2e/fixtures/: bimaru-page.ts  calcudoku-page.ts  kontab-page.ts  nonogram-page.ts  tauri-mock.ts
scripts/: bump-version.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: bimaru.rs  calcudoku.rs  kontab.rs  mod.rs  nonogram.rs
src-tauri/src/games/: mod.rs
src-tauri/src/games/bimaru/: generator.rs  hint.rs  mod.rs  solver.rs  types.rs
src-tauri/src/games/calcudoku/: generator.rs  hint.rs  mod.rs  solver.rs  types.rs
src-tauri/src/games/kontab/: ai.rs  engine.rs  types.rs
src-tauri/src/games/nonogram/: generator.rs  hint.rs  mod.rs  pictures.rs  solver.rs  types.rs
src/lib/components/: Leaderboard.svelte  Sidebar.svelte  ThemeSwitcher.svelte  WinOverlay.svelte
src/lib/services/: calcudoku-tauri.ts  kontab-tauri.ts  nonogram-tauri.ts  persistence.ts  tauri.ts  updater.ts
src/lib/stores/: leaderboard.svelte.ts  leaderboard.test.ts  solved-event.test.ts  stats.svelte.ts  stats.test.ts  theme.svelte.ts  timer.svelte.ts  undo-stack.svelte.ts
src/lib/types/: bimaru.ts  calcudoku.ts  game.test.ts  game.ts  kontab.ts  nonogram.ts
src/routes/: +layout.svelte  +page.svelte
(+42 files in other folders)
