[package]
name = "zzlepuh"
version = "0.1.0"
description = "Zzlepuh — Desktop Puzzle Game Platform"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
rand = "0.9"
thiserror = "2"
