[package]
name = "zzlepuh"
version = "1.2.1"
description = "Zzlepuh — Desktop Puzzle Game Platform"
authors = ["Srecko Skocilic"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-store = "2.4.3"
tauri-plugin-window-state = "2.4.1"
rand = "0.9"
thiserror = "2"

# Updater is desktop-only (not available on mobile targets)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
